--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+    @apply min-h-screen flex flex-col
+}
+main {
+    @apply flex min-h-full h-full flex-1
+}
